--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -6,9 +6,28 @@
   box-sizing: inherit;
 }
 
+$bp--largest-xl: 90em; // 1440px
+$bp--largest: 75em; // 1200px
+$bp-large: 68.75em; // 1100px
+$bp-medium: 56.25em; // 900px
+$bp-small: 37.5em; // 600px
+$bp-smallest: 31.25em; // 500px
+
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem=16px
+
+  @media only screen and (max-width: $bp--largest-xl) {
+    font-size: 50%;
+  }
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 45%;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 40%;
+  }
 }
 
 body {
