--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -28,6 +28,10 @@ html {
   @media only screen and (max-width: $bp-medium) {
     font-size: 40%;
   }
+
+  @media only screen and (max-width: $bp-small) {
+    font-size: 45%;
+  }
 }
 
 body {
