--- a/css/style.css
+++ b/css/style.css
@@ -332,8 +332,7 @@ body {
 @media only screen and (max-width: 37.5em) {
   .rightSide .btnbook {
     padding-right: 0;
-    position: absolute;
-    top: 32rem;
+    padding-top: 4rem;
   }
 }
 .rightSide .btn {
