--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,7 +1,7 @@
 #about {
   overflow: hidden;
   max-width: 144rem;
-  max-height: 100vh;
+  // max-height: 100vh;
   // max-height: 100rem;
   margin: 0 auto;
   padding-top: 5.3rem;
