--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -4,7 +4,7 @@
   // max-height: 100vh;
   // max-height: 100rem;
   margin: 0 auto;
-  padding-top: 5.3rem;
+  padding-top: 8.3rem;
 }
 
 .title {
@@ -30,6 +30,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   grid-template-areas: 'about__leftSide about__rightSide';
+  margin-top: 6rem;
 
   @media only screen and (max-width: $bp-small) {
     grid-template-columns: 1fr;
@@ -73,11 +74,72 @@
         backdrop-filter: blur(40px);
         border-radius: 20px;
         margin-bottom: 4.2rem;
+
+        & .years {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+          // overflow: hidden;
+
+          & img {
+            @media only screen and (max-width: $bp--largest-xl) {
+              width: 83%;
+            }
+          }
+
+          & h2 {
+            font-style: italic;
+            font-weight: normal;
+            font-size: 25rem;
+            color: #e85454;
+            text-shadow: 0px 4px 53px rgba(232, 84, 84, 0.65);
+            position: absolute;
+          }
+
+          & h3 {
+            font-style: italic;
+            font-weight: normal;
+            font-size: 6.4rem;
+            color: rgba(78, 78, 78, 0.41);
+            position: absolute;
+            top: 17rem;
+          }
+        }
+
+        & .para {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          margin-top: 4rem;
+
+          &--title {
+            font-style: italic;
+            font-weight: normal;
+            font-size: 1.8rem;
+            color: #212121;
+          }
+
+          &--text {
+            width: 85%;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 1.4rem;
+            line-height: 176%;
+            text-align: center;
+            color: #4e4e4e;
+            margin-top: 1.2rem;
+          }
+        }
       }
 
       &__cardCount {
+        display: flex;
         width: 28rem;
         height: 7.7rem;
+        padding: 1.2rem 1.8rem;
         background: linear-gradient(
           157.82deg,
           rgba(255, 255, 255, 0.4) 6.67%,
@@ -89,6 +151,48 @@
 
         &:not(:last-child) {
           margin-bottom: 4.2rem;
+        }
+
+        & .cardCount {
+          &__icon {
+            &--bubble {
+              width: 5.4rem;
+              height: 5.4rem;
+              border-radius: 10rem;
+              background: linear-gradient(
+                136.59deg,
+                rgba(255, 255, 255, 0.6) 16.62%,
+                rgba(255, 255, 255, 0.1) 83.33%
+              );
+              box-shadow: 0px 4px 10px -1px rgba(255, 255, 255, 0.15);
+              backdrop-filter: blur(40px);
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+          }
+
+          &__text {
+            margin-left: 1.7rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            & h3 {
+              font-style: normal;
+              font-weight: normal;
+              font-size: 1.8rem;
+              color: #000;
+              mix-blend-mode: overlay;
+            }
+
+            & p {
+              font-style: italic;
+              font-weight: normal;
+              font-size: 2.4rem;
+              color: #f75656;
+              mix-blend-mode: hard-light;
+            }
+          }
         }
       }
     }
@@ -136,9 +240,31 @@
         box-shadow: 0px 4px 10px -1px rgba(255, 255, 255, 0.15);
         backdrop-filter: blur(40px);
         border-radius: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
         &:not(:last-child) {
           margin-bottom: 1rem;
+        }
+
+        & h2 {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 1.8rem;
+          color: #4e4e4e;
+          margin-top: 0.7rem;
+        }
+
+        & p {
+          width: 85%;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 1.3rem;
+          text-align: center;
+          margin-top: 0.9rem;
+          color: #4e4e4e;
         }
       }
     }
