--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,14 @@ body {
 }
 
 .menu {
+  position: relative;
   max-width: 144rem;
   margin: 0 auto;
   padding: 1.5rem 3rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 20000;
 }
 .menu--links {
   display: flex;
@@ -104,6 +106,112 @@ body {
   border-radius: 2rem;
   font-size: 1.8rem;
   color: #fff;
+}
+.menu ul {
+  visibility: hidden;
+  position: absolute;
+  top: 50%;
+  left: 95%;
+  transform: translate(-95%, -50%);
+  width: 7rem;
+  height: 8rem;
+  cursor: pointer;
+}
+@media only screen and (max-width: 50em) {
+  .menu ul {
+    visibility: visible;
+  }
+}
+.menu ul li {
+  list-style: none;
+  position: absolute;
+  background: #fff;
+  width: 80%;
+  height: 0.6rem;
+  border-radius: 2rem;
+  transform: translateY(-50%);
+  transition: 0.9s;
+}
+.menu ul li:nth-of-type(1) {
+  top: 20%;
+}
+.menu ul li:nth-of-type(2) {
+  top: 50%;
+}
+.menu ul li:nth-of-type(3),
+.menu ul li:nth-of-type(4) {
+  width: 50%;
+  top: 80%;
+}
+.menu ul li:nth-of-type(1),
+.menu ul li:nth-of-type(2),
+.menu ul li:nth-of-type(3) {
+  left: 0;
+}
+.menu ul li:nth-of-type(4) {
+  right: 0;
+}
+.menu ul.active li:nth-of-type(1) {
+  top: 50%;
+  transform: translateY(-50%) rotate(45deg);
+}
+.menu ul.active li:nth-of-type(2) {
+  top: 50%;
+  transform: translateY(-50%) rotate(-45deg);
+}
+.menu ul.active li:nth-of-type(3) {
+  left: -50%;
+  opacity: 0;
+}
+.menu ul.active li:nth-of-type(4) {
+  right: -50%;
+  opacity: 0;
+}
+.menu--hamblinks {
+  position: absolute;
+  background: #fff;
+  border-radius: 0 0 3rem 3rem;
+  width: 70rem;
+  height: 45rem;
+  top: -1000%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 5.5rem;
+  transition: 0.9s;
+  opacity: 0.5;
+}
+.menu--hamblinks.active {
+  top: 100%;
+  opacity: 1;
+}
+.menu--hamblinks__link {
+  color: #000;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+.menu--hamblinks__link:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.menu--hamblinks__btn {
+  width: 15rem;
+  height: 4.5rem;
+  background: #ff6b6b;
+  border-radius: 2rem;
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
+  color: #fff;
+  font-weight: normal;
+  font-style: normal;
+  cursor: pointer;
 }
 
 .rightSide {
